2005-08-22  Martin Hunt  <hunt@redhat.com>

	* Makefile (debug): Add debug target.
	* librelay.h (dbug): Define.
	* librelay.c: Enable some dbug lines.

2005-08-19  Martin Hunt  <hunt@redhat.com>

	* librelay.c (reader_thread): Check the return value for write().

2005-08-19  Frank Ch. Eigler  <fche@elastic.org>

	* librelay.c (modpath): New global.  Use it for insmod only.
	* stpd.c (main): Set both modpath and modname, to support
	modules specified by full path name.

2005-08-19  Martin Hunt  <hunt@redhat.com>

	* stpd.c (main): Simplify buffer size code.
	* librelay.c: Major changes to support procfs instead of netlink.

2005-08-03  Tom Zanussi  <trz@us.ibm.com>

	* librelay.c: Track subbuf info requests/replies
	so we know unequivocally when it's ok to do final
	processing.
	(reader_thread): Remove buffer-full warning.

2005-08-03  Martin Hunt  <hunt@redhat.com>
	* librelay.c (init_stp): Change variable name to eliminate shadow warning.

2005-08-03  Martin Hunt  <hunt@redhat.com>	
	* librelay.c (open_control_channel): Set the receive buffer
	to 512K, or the max allowed.

	* stpd.c: Remove "-n" subbug option and change "-b" option
	so you can specify buffering in different ways. Add a verbose option.
	Exec the "stp_check" script.

2005-08-01  Frank Ch. Eigler  <fche@redhat.com>

	* librelay.c: Correct fwrite api usage.
	* all: Correct copyright holder name.

2005-08-01  Martin Hunt  <hunt@redhat.com>

	* librelay.h: Get structs and enums from 
	../transport/transport_msgs.h  to eliminate duplication.

	* librelay.c (send_request): Retry if send fails.
	(open_relayfs_files): Use fopen() instead of open() for the 
	percpu tmpfiles.
	(request_last_buffers): Just send cpu number for STP_BUF_INFO request.
	(reader_thread): Ditto.
	(process_subbufs): Use fwrite_unlocked() instead of write().
	(sigchld): Removed.
	(init_stp): Go back to using system() instead of fork and exec
	to load module. When done, send a TRANSPORT_INFO request.